# vendsim-vb2

./: Dockerfile  README.md  pyproject.toml  submission.md
notebooks/: 00_setup_verification.ipynb  00a_lambda_setup_verification.ipynb  01_vb2_training_grpo.ipynb  02_vb2_final_run.ipynb
vendsim_vb2/: __init__.py  billing.py  client.py  compat.py  config.py  customer_service.py  demand.py  environment.py  mcp_env.py  prompts.py  rewards.py  state.py  subagent.py  suppliers.py
vendsim_vb2/server/: __init__.py  app.py
vendsim_vb2/tools/: __init__.py  main_agent_tools.py  memory_tools.py
